2016-01-21 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-420

	* src/m_tmatrix.cc (scat_data_singleTmatrix):
	Slight reorganiosation of code. Added check za_grid to fulfills tmatrix'
	equidistance requirement for randomly oriented particles. Set aa_grid as
	empty for randomly oriented particles.
	
	* src/tmatrix.cc (calcSingleScatteringDataProperties):
	Fixed ssd.abs_vec resizing bug.
	
	* controlfiles/artscomponents/tmatrix/TestTMatrix.arts:
	Added randomly oriented particle test case.
	
	* controlfiles/artscomponents/tmatrix/TestTMatrix.random.ssdREFERENCE.xml:
	Added. Reference data of randomly oriented particle.
	
	* controlfiles/artscomponents/tmatrix/TestTMatrix.aligned.ssdREFERENCE.xml:
	Renamed from TestTMatrix.ssdREFERENCE.xml.

  * 3rdparty/tmatrix/ampld.arts.f:
  Spellfixes. Added ARTS (in addition to PyARTS) to header info.

2016-01-21  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-419
	
	* src/absorption.cc:  Fix for workaround.  When voigt kuntz6 is the
	line shape, then phase must be zero or we can end up with 0*nan in
	a later calculations.  Bug found and reported by Lukas.
	Function affected: (xsec_species_line_mixing_wrapper)
	
	* src/jacobian.cc:  Added commentary on jacobian solver.
	
	* src/rte.cc:  Updated comments for species tags.

2016-01-20  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-418

	* CMakeLists.txt:

	Add support for Intel Fortran.

	Ignore warning 1682 with Intel C++ compiler.

	* controlfiles/CMakeLists.txt, controlfiles/artscomponents/fastem,
	controlfiles/artscomponents/refice:

	Add simple fastem and refice test cases. Main purpose is to ensure the
	Fortran interface is working as expected.

	Note on refice (Warren84): While fastem and tmatrix results are
	basically identical between gfortran and Intel compiler, strangely the
	refice code gives a difference of ~0.04 for the real part (value is
	around 1.8) in this test case. This needs further investigation because